<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#FBF9FD"
    android:orientation="vertical"
    android:padding="15dip">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp">

            <FrameLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/gray_border">

                <!-- 从drawable资源加载背景，实现view为圆形 -->
                <View
                    android:id="@+id/pensize"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_background" />

            </FrameLayout>

            <SeekBar
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:max="50"
                android:min="4" />
        </LinearLayout>


        <RadioGroup
            android:id="@+id/toolbar"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/pen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pen"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/eraser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eraser"
                android:textSize="18sp"
                android:textStyle="bold" />


            <RadioButton
                android:id="@+id/round"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/round"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rectangle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rectangle"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RadioGroup>

        <com.example.majordesign.WrittingView
            android:id="@+id/writting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <FrameLayout
                android:layout_width="60dp"
                android:layout_height="60dp">

                <!-- 从drawable资源加载背景，实现view为圆形 -->
                <View
                    android:id="@+id/colorview"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_background" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical">

                <!-- 从value资源加载style,让进度条颜色为红色 -->
                <SeekBar
                    android:id="@+id/redbar"
                    style="@style/SeekBarRed"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:max="255"
                    android:min="0" />

                <!-- 从value资源加载style,让进度条颜色为绿色 -->
                <SeekBar
                    android:id="@+id/greenbar"
                    style="@style/SeekBarGreen"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:max="255"
                    android:min="0" />

                <!-- 从value资源加载style,让进度条颜色为蓝色 -->
                <SeekBar
                    android:id="@+id/bluebar"
                    style="@style/SeekBarBlue"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:max="255"
                    android:min="0" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:weightSum="4">

            <Button
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/undo"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/redo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/redo"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/todo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
